...
                onAction(DeviceSettingsActions.ChangeBookmarkMode(mode))
            },
        )
    }
}

internal const val DEVICE_SETTINGS_LIST_TEST_TAG = "device_settings_list"
internal const val SPEED_TEST_LAUNCHER_TEST_TAG = "speed_test_launcher"
private const val DEVICE_SETTINGS_HEADER_ITEMS_COUNT = 5

private fun LazyListScope.deviceSettingsHeaderItems(
    device: DeviceUi,
    apiDomain: ApiDomainDialogState,
    onAction: (UIAction) -> Unit,
...
